--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="keywords" content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.62" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.63" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -36,9 +36,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.62" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.62" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.62" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.63" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.63" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.63" media="screen" />
   </head>
 
   <body>
@@ -56,10 +56,14 @@
 
         <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen" :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.62" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.62" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.62" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.62" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)" href="styles/light.css?2.1.63" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.63" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.63" media="screen" />
+      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'" href="styles/focus.css?2.1.63" media="screen" />
+      <splash :class="{hide: appStatePageHasLoaded}">
+        <!-- <icon class="logo giant"></icon> -->
+        <!-- <h2>Facets</h2> -->
+      </splash>
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage" v-html="getPlayerMessage"></message>
       </notification>
@@ -320,20 +324,24 @@
           <h2>The Daily Facet</h2>
           <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
 
-          <h3 v-show="appStateIsGettingDailyGames">Past 10 days</h3>
+          <leftright style="margin: 10px 0 0">
+            <a class="padded" :class="{disabled: appStateIsGettingDailyGames || appStateIsGettingUserStats}" @click="GetDailyGames">Refresh</a>
+          </leftright>
+
           <message style="padding: calc(2 * var(--defaultGap)) 0" v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
             <p v-if="Navigator.online">There was an error. 😢</p>
             <p v-if="!Navigator.online">You appear to be offline. 😢</p>
+            <button v-if="!Navigator.online" @click="GetDailyGames">Retry</button>
           </message>
-          <icon v-show="appStateIsGettingDailyGames" style="position: relative" class="spinner show"></icon>
-          <gamelinks>
+          <icon v-show="appStateIsGettingDailyGames " style="position: relative" class="spinner show"></icon>
+          <gamelinks v-if="!appStateIsGettingDailyGames && !appStateIsGettingUserStats">
             <gamelink @click="HandleGameLinkClick(event, game)" :class="{done: game.solved, quit: game.quit}" v-for="(game, index) in getDailyGamesWithWordSetNames">
               <p>
                 <a>
                   <small>
                     <dot v-if="index === 0 && getTodaysDaily !== getCurrentDaily && game.guesses === 0 && getDailyIsFreshToday || game.guesses === 0 && !HasUserStartedGame(game)">•</dot>
                     <icon v-if="game.solved" class="eye tiny"></icon>
-                    {{game.date}}
+                    {{game === getTodaysDaily ? 'Today' : game.date}}
                   </small>
                   <clues> {{game.hints.replace(/:/g," - ")}} </clues>
                 </a>
@@ -508,14 +516,14 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.62" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.62" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.62" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.62" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.62" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.62" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.62" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.63" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.63" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.63" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.63" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.63" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.63" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.63" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.62" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.63" type="text/javascript"></script>
   </body>
 </html>
