--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.73" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.74" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.73" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.73" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.73" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.74" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.74" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.74" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.73" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.73"
+        href="styles/light.css?2.1.74" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.74"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.73" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.74" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.73" media="screen" />
+        href="styles/focus.css?2.1.74" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -112,18 +112,28 @@
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
           <h2>How to play</h2>
-          <p>A Facets puzzle consists of 4 different <span class="highlightText">clues</span> that connect 4 different
+          <p v-if="!appStateShowCreateOOBE && appDataPlayerCurrent.role === 'creator'">A Facets puzzle consists of 4
+            different <span class="highlightText">clues</span> that connect 4 different
             <span class="highlightText">word-pairs</span>.
+            You can create your own puzzles to send to friends, solve the
+            Daily Facet, or guess puzzles your friends create!
           </p>
-
-          <h3>Guessing</h3>
-          <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you think
-            you've solved the puzzle!</p>
-          <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
-          <p>Hit the <cta>{{appDataActionButtonTexts.guess}}</cta> or <cta>{{appDataActionButtonTexts.reply}}</cta>
-            button to check your solution.</p>
-
-          <h3>Creating</h3>
+          <p v-if="!appStateShowCreateOOBE && appDataPlayerCurrent.role !== 'creator'">A Facets puzzle consists of 4
+            different <span class="highlightText">clues</span> that connect 4 different
+            <span class="highlightText">word-pairs</span>.
+            You can guess puzzles your friends create, solve the
+            Daily Facet, or create your own puzzles to send to friends!
+          </p>
+          <hidden v-if="appDataPlayerCurrent.role !== 'creator'">
+            <h3>Guessing</h3>
+            <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you
+              think
+              you've solved the puzzle!</p>
+            <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
+            <p>Hit the <cta>{{appDataActionButtonTexts.guess}}</cta> or <cta>{{appDataActionButtonTexts.reply}}</cta>
+              button to check your solution.</p>
+          </hidden>
+          <h3 v-if="!appStateShowCreateOOBE">Creating</h3>
           <p>When creating a new puzzle, it's your job to come up with clues that "connect" the four word-pairs that are
             displayed on the edges of the gem.</p>
           <img :src="'./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
@@ -138,6 +148,16 @@
           <img :src="'./images/tut-4' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
           <p>Click the <cta>{{appDataActionButtonTexts.respond}}</cta> button to send the puzzle back, even if you are
             just giving them the solution.</p>
+
+          <hidden v-if="appDataPlayerCurrent.role === 'creator'">
+            <h3>Guessing</h3>
+            <p>Find the right word-pairs based on the clues given. Drag cards onto the gem and rotate them until you
+              think
+              you've solved the puzzle!</p>
+            <img :src="'./images/tut-6' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg'" />
+            <p>Hit the <cta>{{appDataActionButtonTexts.guess}}</cta> or <cta>{{appDataActionButtonTexts.reply}}</cta>
+              button to check your solution.</p>
+          </hidden>
         </section>
         <controls><button @click="ToggleShowTutorial(event)">Got it</button></controls>
       </modal>
@@ -362,7 +382,7 @@
               <p>
                 <a href=""><small>{{game.name}}
                     {{game.useExtraCard === "true" ? '(5-cards)' : ''}}</small>{{game.hints.replace(/:/g," - ")}}</a>
-                <button title="Report this puzzle for offensive language." @click="ReportPuzzle(game)"
+                <button title="Report this puzzle for offensive language." @click="ReportPuzzle(event, game)"
                   class="inline report">
                   <icon class="alert"></icon>Report
                 </button>
@@ -555,7 +575,7 @@
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
                 type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
                 :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
-                onfocus="this.placeholder=''" onblur="this.placeholder='tap'" placeholder="tap" />
+                placeholder="clue" />
             </hint>
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
@@ -662,15 +682,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.73" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.73" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.73" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.73" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.73" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.73" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.73" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.74" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.74" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.74" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.74" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.74" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.74" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.74" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.73" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.74" type="text/javascript"></script>
   </body>
 
 </html>
