--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.76" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.77" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.76" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.76" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.76" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.77" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.77" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.77" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.76" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.76"
+        href="styles/light.css?2.1.77" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.77"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.76" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.77" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.76" media="screen" />
+        href="styles/focus.css?2.1.77" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -398,15 +398,39 @@
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
+
+          <small class="statlabel"> You've solved {{appDataPlayerStats.total}}
+            {{appDataPlayerStats.total === 0 ? 'Daily Facet' :  'Daily Facets' }} </small>
+          <stats>
+
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
+              </value>
+              <small>in 1 try</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g2 ? appDataPlayerStats.g2 : '-'}}
+              </value>
+              <small>in 2 tries</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.beyond2 ? appDataPlayerStats.beyond2 : '-'}}
+              </value>
+              <small>in 3+ tries</small>
+            </stat>
+            <stat>
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.quit ? appDataPlayerStats.quit : '-'}}
+              </value>
+              <small>Quit</small>
+            </stat>
+          </stats>
           <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
 
-          <leftright style="margin: 20px 0 0">
-            <a class="padded" :class="{disabled: appStateIsGettingDailyGames || appStateIsGettingUserStats}"
-              @click="GetDailyGames">Refresh</a>
-          </leftright>
-
           <icon v-show="appStateIsGettingDailyGames " style="position: relative" class="spinner show"></icon>
-
           <message style="padding: calc(2 * var(--defaultGap)) 0"
             v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
             <p v-if="Navigator.online">There was an error. 😢</p>
@@ -445,13 +469,9 @@
                   <icon class="continue"></icon>
                 </button>
               </p>
-              <small class="statlabel"> Player Success Rates </small>
-              <stats>
-                <stat>
-                  <value>{{!appStateIsGettingDailyGameStats && game.stats && game.stats.avg ? game.stats.avg : '-'}}
-                  </value>
-                  <small>Average</small>
-                </stat>
+
+              <!-- <small class="statlabel"> {{game === getTodaysDaily ? 'Today\'s' : game.date}} player counts </small> -->
+              <stats title="Success rates for sovling this puzzle">
                 <stat>
                   <value>
                     {{!appStateIsGettingDailyGameStats && game.stats && game.stats.guesscounts.g1 ? game.stats.guesscounts.g1 : '-'}}
@@ -470,9 +490,19 @@
                   </value>
                   <small>in 3+ tries</small>
                 </stat>
+                <stat>
+                  <value>{{!appStateIsGettingDailyGameStats && game.stats && game.stats.avg ? game.stats.avg : '-'}}
+                  </value>
+                  <small>Avg. tries</small>
+                </stat>
               </stats>
             </gamelink>
           </gamelinks>
+
+          <leftright style="margin: 20px 0 0">
+            <a class="padded" :class="{disabled: appStateIsGettingDailyGames || appStateIsGettingUserStats}"
+              @click="GetDailyGames">Refresh</a>
+          </leftright>
 
           <controls>
             <button @click="appStateShowDailyGames = false">Done</button>
@@ -682,15 +712,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.76" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.76" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.76" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.76" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.76" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.76" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.76" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.77" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.77" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.77" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.77" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.77" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.77" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.77" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.76" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.77" type="text/javascript"></script>
   </body>
 
 </html>
