--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.1.78" />
+    <link rel="manifest" href="manifest.webmanifest?2.1.79" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -39,9 +39,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.1.78" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.1.78" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.78" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.1.79" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.1.79" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.1.79" media="screen" />
   </head>
 
   <body>
@@ -62,13 +62,13 @@
       </preload>
       <link rel="stylesheet"
         v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.1.78" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.78"
+        href="styles/light.css?2.1.79" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.1.79"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.78" media="screen" />
+      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.1.79" media="screen" />
       <link rel="stylesheet"
         v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && appDataPlayerCurrent.role !== 'creator'"
-        href="styles/focus.css?2.1.78" media="screen" />
+        href="styles/focus.css?2.1.79" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
         <!-- <h2>Facets</h2> -->
@@ -108,6 +108,41 @@
             </button>
           </leftright>
         </subtitle>
+      </notification>
+      <notification :class="{show: appStateDailyCongrats}" style="z-index: 3000;">
+        <message>
+          <h2 v-if="getCurrentDaily">{{getCurrentDaily.quit ? 'Oh well' : 'Congrats'}}</h2>
+          <h2>Congrats!</h2>
+          <small class="statlabel"> You've solved {{appDataPlayerStats.total}}
+            {{appDataPlayerStats.total === 0 ? 'Daily Facet' :  'Daily Facets' }} </small>
+          <stats>
+
+            <stat class="boxed">
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
+              </value>
+              <small>in 1 try</small>
+            </stat>
+            <stat class="boxed">
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g2 ? appDataPlayerStats.g2 : '-'}}
+              </value>
+              <small>in 2 tries</small>
+            </stat>
+            <stat class="boxed">
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.beyond2 ? appDataPlayerStats.beyond2 : '-'}}
+              </value>
+              <small>in 3+ tries</small>
+            </stat>
+            <stat class="boxed">
+              <value>
+                {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.quit ? appDataPlayerStats.quit : '-'}}
+              </value>
+              <small>quit</small>
+            </stat>
+          </stats>
+        </message>
       </notification>
       <modal v-if="appStateShowTutorial" class="tutorial">
         <section>
@@ -395,6 +430,7 @@
           </controls>
         </section>
       </modal>
+
       <modal v-if="appStateShowDailyGames">
         <section>
           <h2>The Daily Facet</h2>
@@ -403,29 +439,29 @@
             {{appDataPlayerStats.total === 0 ? 'Daily Facet' :  'Daily Facets' }} </small>
           <stats>
 
-            <stat>
+            <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g1 ? appDataPlayerStats.g1 : '-'}}
               </value>
               <small>in 1 try</small>
             </stat>
-            <stat>
+            <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.g2 ? appDataPlayerStats.g2 : '-'}}
               </value>
               <small>in 2 tries</small>
             </stat>
-            <stat>
+            <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.beyond2 ? appDataPlayerStats.beyond2 : '-'}}
               </value>
               <small>in 3+ tries</small>
             </stat>
-            <stat>
+            <stat class="boxed">
               <value>
                 {{!appStateIsGettingDailyGameStats && appDataPlayerStats && appDataPlayerStats.quit ? appDataPlayerStats.quit : '-'}}
               </value>
-              <small>Quit</small>
+              <small>quit</small>
             </stat>
           </stats>
           <p>These AI-solved puzzles can be quite hard. If you solve one, challenge your friends to do better!</p>
@@ -712,15 +748,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.1.78" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.1.78" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.1.78" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.1.78" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.1.78" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.1.78" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.1.78" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.1.79" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.1.79" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.1.79" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.1.79" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.1.79" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.1.79" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.1.79" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.1.78" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.1.79" type="text/javascript"></script>
   </body>
 
 </html>
